openapi for user routes
